[TASK-003] Home page layout

--- a/mvp-pokedex/src/app/home-page/home-page.component.html
+++ b/mvp-pokedex/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <section class="home-page-details">
-    <div>
-        <button class="choose-first-pokemon">Choose me a Pokemon!</button>
+    <div class="div-choose-first-pokemon">
+        <a class="btn-choose-first-pokemon">Choose me a Pokemon!</a>
     </div>
 </section>
