--- a/mvp-pokedex/src/styles.css
+++ b/mvp-pokedex/src/styles.css
@@ -1,5 +1,11 @@
 * {
-    margin: 0;
+    margin: auto;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: antiquewhite;
+}
+
+html, body, section, div{
+    height: 100%;
+    width: 100%;
 }
