[TASK-003] Pokemon page layout

--- a/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
+++ b/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
@@ -1,7 +1,12 @@
 <section>
+    <div class="div-pokemon-img">
+        <img class="pokemon-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
+    </div>
+    <div class="div-pokemon-info">
+        <p class="pokemon-id">#001</p> <!--hardcoded - it shall be changed with API-->
+        <p class="pokemon-name">Bulbasaur</p> <!--hardcoded - it shall be changed with API-->
+    </div>
     <div>
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
-        <p>Bulbasaur</p> <!--hardcoded - it shall be changed with API-->
-        <p>#001</p> <!--hardcoded - it shall be changed with API-->
+        <a class="btn-choose-another-pokemon">Choose another Pokemon!</a>
     </div>
 </section>
