[TASK-004] Working on random function for images

--- a/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
+++ b/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,7 @@
 <section>
     <div class="div-pokemon-img">
-        <img class="pokemon-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
+        <img class="pokemon-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/{{ generateId(100,151) }}.png"> 
+        <!-- teste provisório para ver se o random funciona - a imagem troca entre os pokemon 100 e 151 -->
     </div>
     <div class="div-pokemon-info">
         <p class="pokemon-id">#001</p> <!--hardcoded - it shall be changed with API-->
