--- a/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
+++ b/mvp-pokedex/src/app/pokemon-list/pokemon-list.component.html
@@ -1,13 +1,15 @@
 <section>
-    <div class="div-pokemon-img">
-        <img class="pokemon-img" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/{{ generateId(1,151) }}.png"> 
-        <!-- teste provisório para ver se o random funciona - a imagem troca entre os pokemon 100 e 151 -->
+    <div *ngIf="!isLoading;else loading">
+        <div class="div-pokemon-img">
+            <img class="pokemon-img" src="{{ pokemonImg }}"> 
+        </div>
+        <div class="div-pokemon-info">
+            <p class="pokemon-id">{{ pokemonId }}</p> 
+            <p class="pokemon-name">{{ pokemonName }}</p> 
+        </div>
+        <div>
+            <a class="btn-choose-another-pokemon" (click)="getPokemonById()">Choose another Pokemon!</a>
+        </div>
     </div>
-    <div class="div-pokemon-info">
-        <p class="pokemon-id">#001</p> <!--hardcoded - it shall be changed with API-->
-        <p class="pokemon-name">Bulbasaur</p> <!--hardcoded - it shall be changed with API-->
-    </div>
-    <div>
-        <a class="btn-choose-another-pokemon" (click)="generateId(1,151)">Choose another Pokemon!</a>
-    </div>
+    <ng-template #loading>Loading...</ng-template>
 </section>
