TASK-005 - layout updated. Somo components were created and will be worked on next tasks

--- a/mvp-pokedex/src/app/app.component.html
+++ b/mvp-pokedex/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-home-page></app-home-page>
-<!-- <app-pokemon-list></app-pokemon-list> -->
+<!-- <app-home-page></app-home-page> -->
+<app-pokemon-list></app-pokemon-list>
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-teste></app-teste> -->
