--- a/mvp-pokedex/src/app/home-page/home-page.component.html
+++ b/mvp-pokedex/src/app/home-page/home-page.component.html
@@ -1,5 +1,3 @@
-<section class="home-page-details">
-    <div class="div-choose-first-pokemon">
-        <a class="btn-choose-first-pokemon">Choose me a Pokemon!</a>
-    </div>
-</section>
+<div class="div-choose-pokemon">
+    <a class="btn-choose-pokemon" [routerLink]="['/random-pokemon']" routerLinkActive="router-link-active" >Choose me a Pokemon</a>
+</div>
