--- a/mvp-pokedex/src/app/app.component.html
+++ b/mvp-pokedex/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <app-home-page></app-home-page> -->
-<app-pokemon-list></app-pokemon-list>
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-teste></app-teste> -->
+<router-outlet></router-outlet>
