--- a/mvp-pokedex/src/styles.css
+++ b/mvp-pokedex/src/styles.css
@@ -11,3 +11,7 @@ html, body, section {
     height: 100%;
     width: 100%;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
